--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <div class="h-100">
                     <div class="wrapthumbnail">
                         <a href="/blog/my-personal-mission-statement">
-                            <span class="thumbnail d-block" style="background-image:url(/assets/images/16.jpg);">
+                            <span class="thumbnail d-block" style="background-image:url(/assets/images/posts/20180801.jpg);">
                             </span>
                         </a>
                     </div>
@@ -332,7 +332,7 @@
     <div class="card h-100">
         <div class="maxthumb">
             <a href="/blog/my-personal-mission-statement">
-                 <img class="img-fluid" src="/assets/images/16.jpg" alt="My personal mission statement"> 
+                 <img class="img-fluid" src="/assets/images/posts/20180801.jpg" alt="My personal mission statement"> 
             </a>
         </div>
         <div class="card-body">
