--- a/pt/index.html
+++ b/pt/index.html
@@ -65,40 +65,28 @@
 
                 <!-- Begin Menu -->
 
-                <ul class="navbar-nav ml-auto">
+ <ul class="navbar-nav ml-auto">
 
 
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/pt/index.html">Home</a>
-                    </li>
+    <li class="nav-item active">
+        <a class="nav-link" href="/pt/index.html">Página principal</a>
+    </li>
 
-                    <li class="nav-item ">
-                        <a class="nav-link" href="/pt/about">About</a>
-                    </li>
+    <li class="nav-item ">
+        <a class="nav-link" href="/pt/about">Sobre</a>
+    </li>
 
-                    <li class="nav-item ">
-                        <a class="nav-link" href="/pt/contact">Contact</a>
-                    </li>
+    <li class="nav-item ">
+        <a class="nav-link" href="/pt/contact">Contato</a>
+    </li>
 
-                    <li class="nav-item">
-                        <a target="_blank" class="nav-link" href="http://call.hugomagalhaes.com">Schedule a call</a>
-                    </li>
+    <li class="nav-item">
+        <a target="_blank" class="nav-link" href="http://call.hugomagalhaes.com">Agende uma call</a>
+    </li>
 
-                    <!-- <li class="nav-item">
-                        <a target="_blank" class="nav-link" href="https://www.facebook.com/wowthemesnet/">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                    </li>
+</ul>
 
-                    <li class="nav-item">
-                        <a target="_blank" class="nav-link" href="https://twitter.com/wowthemesnet">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                    </li> -->
-
-                </ul>
-
-                <!-- End Menu -->
+<!-- End Menu -->
 
             </div>
 
