--- a/pt/index.html
+++ b/pt/index.html
@@ -34,7 +34,7 @@
 <meta property="og:description" content="Senior software engineer and agile manager. React, and Node.js enthusiast. Engineering Lead @ BCG Digital Ventures. Berlin, Germany" />
 <meta property="og:site_name" content="Hugo Nogueira" />
 <script type="application/ld+json">
-{"url":"/","headline":"Home","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/assets/images/logo.png"}},"description":"Senior software engineer and agile manager. React, and Node.js enthusiast. Engineering Lead @ BCG Digital Ventures. Berlin, Germany","name":"Hugo Nogueira","@type":"WebSite","@context":"http://schema.org"}</script>
+{"url":"/","headline":"Home","sameAs":["https://twitter.com/hugomn/","https://www.facebook.com/helloitshugo","https://www.instagram.com/hugomn/","https://github.com/hugomn"],"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/assets/images/logo.png"}},"description":"Senior software engineer and agile manager. React, and Node.js enthusiast. Engineering Lead @ BCG Digital Ventures. Berlin, Germany","name":"Hugo Nogueira","@type":"WebSite","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
