--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,11 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Senior software engineer and agile manager. React, and Node.js enthusiast. Engineering Lead @ BCG Digital Ventures. Berlin, Germany" />
 <meta property="og:description" content="Senior software engineer and agile manager. React, and Node.js enthusiast. Engineering Lead @ BCG Digital Ventures. Berlin, Germany" />
+<link rel="canonical" href="https://www.hugomagalhaes.com/contact" />
+<meta property="og:url" content="https://www.hugomagalhaes.com/contact" />
 <meta property="og:site_name" content="Hugo Nogueira" />
 <script type="application/ld+json">
-{"url":"/contact","headline":"Contact","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/assets/images/logo.png"}},"description":"Senior software engineer and agile manager. React, and Node.js enthusiast. Engineering Lead @ BCG Digital Ventures. Berlin, Germany","@type":"WebPage","@context":"http://schema.org"}</script>
+{"url":"https://www.hugomagalhaes.com/contact","headline":"Contact","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.hugomagalhaes.com/assets/images/logo.png"}},"description":"Senior software engineer and agile manager. React, and Node.js enthusiast. Engineering Lead @ BCG Digital Ventures. Berlin, Germany","@type":"WebPage","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
