--- a/pt/index.html
+++ b/pt/index.html
@@ -35,6 +35,8 @@
 <link rel="canonical" href="https://www.hugomagalhaes.com/pt/" />
 <meta property="og:url" content="https://www.hugomagalhaes.com/" />
 <meta property="og:site_name" content="Hugo Nogueira" />
+<meta property="article:publisher" content="1294104205" />
+<meta property="fb:app_id" content="2266339926985215" />
 <script type="application/ld+json">
 {"url":"https://www.hugomagalhaes.com/","headline":"Home","sameAs":["https://twitter.com/hugomn/","https://www.facebook.com/helloitshugo","https://www.instagram.com/hugomn/","https://github.com/hugomn"],"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.hugomagalhaes.com/assets/images/logo.png"}},"description":"Senior software engineer and agile manager. React, and Node.js enthusiast. Engineering Lead @ BCG Digital Ventures. Berlin, Germany","name":"Hugo Nogueira","@type":"WebSite","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
